--- a/app/src/main/res/layout/simple_list_item.xml
+++ b/app/src/main/res/layout/simple_list_item.xml
@@ -1,31 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
 
     <ImageView
+        android:id="@+id/imageView_img"
         android:layout_width="90dp"
         android:layout_height="80dp"
-        android:scaleType="fitXY"
-        android:id="@+id/imageView_img"
+        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true" />
+        android:scaleType="fitXY" />
 
     <TextView
-        style="@style/bikeText"
-        android:text="test"
         android:id="@+id/textView_bikeName"
+        style="@style/bikeText"
+        android:layout_alignEnd="@+id/view"
         android:layout_alignParentTop="true"
-        android:layout_alignBottom="@+id/imageView_img"
-        android:layout_alignParentEnd="true"
-        android:layout_toEndOf="@+id/imageView_img" />
+        android:layout_alignRight="@+id/view"
+        android:layout_toEndOf="@+id/imageView_img"
+        android:layout_toRightOf="@+id/imageView_img"
+        android:text="test" />
+
     <View
-        android:background="#48a3d6"
-        android:layout_width="fill_parent"
-        android:layout_height="1dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_alignBottom="@+id/textView_bikeName"/>
+        android:id="@+id/view"
+        style="@style/view"
+        android:layout_alignBottom="@+id/imageView_img"
+        android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:id="@+id/textView_category"
+        style="@style/SubText"
+        android:layout_alignEnd="@+id/view"
+        android:layout_alignRight="@+id/view"
+        android:layout_below="@+id/textView_bikeName"
+        android:layout_toEndOf="@+id/imageView_img"
+        android:layout_toRightOf="@+id/imageView_img"
+        android:text="test" />
 </RelativeLayout>
