--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -21,7 +21,28 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textStyle">normal|bold</item>
         <item name="android:textColor">#003366</item>
-        <item name="android:gravity">center</item>
+        <item name="android:gravity">left</item>
+        <item name="android:layout_marginTop">6dp</item>
+    </style>
+
+    <style name="SubText">
+        <item name="android:textAppearance">?android:attr/textAppearanceMedium</item>
+        <item name="android:textSize">18dp</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textStyle">normal|bold</item>
+        <item name="android:textColor">#003366</item>
+        <item name="android:gravity">left</item>
+        <item name="android:layout_marginTop">6dp</item>
+    </style>
+
+    <style name="view">
+        <item name="android:background">#48a3d6</item>
+        <item name="android:layout_width">fill_parent</item>
+        <item name="android:layout_height">1dp</item>
+        <item name="android:layout_marginLeft">10dp</item>
+        <item name="android:layout_marginRight">10dp</item>
+        <item name="android:layout_marginTop">2dp</item>
     </style>
 
 </resources>
