--- a/app/src/main/res/layout/bike_fragment.xml
+++ b/app/src/main/res/layout/bike_fragment.xml
@@ -2,25 +2,49 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:background="@android:color/background_light"
+    android:orientation="vertical">
 
     <TextView
-        style="@style/bikeText"
         android:id="@+id/textView_name"
-        android:text="CHECK"
-        android:layout_marginTop="47dp"
+        style="@style/bikeText"
         android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="54dp"
+        android:text="CHECK" />
+
+    <ImageView
+        android:id="@+id/imageView_bike"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:scaleType="fitCenter"
+        android:src="@drawable/logomain"
+        android:layout_below="@+id/view"
+        android:layout_centerHorizontal="true" />
+
+    <View
+        android:id="@+id/view"
+        style="@style/view"
+        android:layout_below="@+id/textView_name"
         android:layout_centerHorizontal="true" />
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:scaleType="fitXY"
-        android:id="@+id/imageView_bike"
-        android:layout_marginTop="45dp"
-        android:src="@drawable/logomain"
-        android:layout_below="@+id/textView_name"
-        android:layout_centerHorizontal="true" />
+        android:id="@+id/imageView"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_above="@+id/imageView_bike"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:src="@drawable/leftswipe" />
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_above="@+id/imageView_bike"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:src="@drawable/rightswipe" />
 
 
 </RelativeLayout>
