--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -30,7 +30,7 @@
         <item name="android:textSize">18dp</item>
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:textStyle">normal|bold</item>
+        <item name="android:textStyle">normal</item>
         <item name="android:textColor">#003366</item>
         <item name="android:gravity">left</item>
         <item name="android:layout_marginTop">6dp</item>
