--- a/app/src/main/res/layout/activity_bikelist.xml
+++ b/app/src/main/res/layout/activity_bikelist.xml
@@ -3,11 +3,27 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/imageView"
+        android:src="@drawable/re_bg"
+        android:scaleType="fitXY"
+        android:alpha=".20"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true" />
+
     <TextView
         style="@style/bikeText"
         android:text="Royal Enfield Motorcycles"
         android:id="@+id/textView2"
         android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
+
+    <View
+        android:id="@+id/view"
+        style="@style/view"
+        android:layout_below="@+id/textView2"
         android:layout_centerHorizontal="true" />
 
     <RelativeLayout
@@ -20,7 +36,8 @@
             android:layout_marginTop="12dp"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"/>
+            android:layout_alignParentStart="true"
+/>
 
     </RelativeLayout>
 
