--- a/app/src/main/res/layout/fragment_mydetails.xml
+++ b/app/src/main/res/layout/fragment_mydetails.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent" android:layout_height="match_parent">
 
     <ImageView
         android:layout_width="match_parent"
@@ -10,7 +8,7 @@
         android:id="@+id/imageView"
         android:src="@drawable/re_bg"
         android:scaleType="fitXY"
-        android:alpha=".10"
+        android:alpha=".20"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true" />
 
@@ -27,7 +25,7 @@
         <GridLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:columnCount="2"
+            android:columnCount="5"
             android:layout_alignParentEnd="true"
             android:layout_alignParentStart="true"
             android:id="@+id/gridlayout1">
@@ -57,6 +55,43 @@
                 android:layout_marginTop="10dp"
                 android:text="Bull Type" />
 
+
+            <TextView
+                style="@style/DetailText"
+                android:id="@+id/MileageTextView"
+                android:layout_column="0"
+                android:layout_row="2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginTop="10dp"
+                android:text="Mileage" />
+
+            <TextView
+                style="@style/DetailText"
+                android:id="@+id/FuelCosrTextView"
+                android:layout_column="0"
+                android:layout_row="3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginTop="10dp"
+                android:text="Fuel Cost " />
+
+            <TextView
+                style="@style/DetailText"
+                android:id="@+id/MailTextView"
+                android:layout_column="0"
+                android:layout_row="4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginTop="10dp"
+                android:text="Email id " />
+
             <EditText
                 android:id="@+id/UserNameEditText"
                 android:layout_column="1"
@@ -75,101 +110,15 @@
                 android:layout_width="250dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:gravity="left"
+                android:gravity="center"
                 android:hint="Password"
                 android:inputType="textPassword"
                 android:singleLine="true" />
-        </GridLayout>
-    </RelativeLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:id="@+id/linearlayoutButtons"
-        android:layout_below="@+id/relativelayout1"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="10dp">
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/button_nearest_showroom"
-            android:text="Find Showroom"
-            android:layout_marginLeft="40dp"
-            android:background="@android:color/transparent"
-            android:textColor="#808080"
-            android:textStyle="bold|normal" />
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/button_check_later"
-            android:text="Maybe Later"
-            android:layout_marginLeft="40dp"
-            android:background="@android:color/transparent"
-            android:textColor="#808080"
-            android:textStyle="bold|normal" />
-    </LinearLayout>
-
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/relativelayout2"
-        android:layout_below="@+id/linearlayoutButtons"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="10dp"
-        android:layout_alignParentStart="true">
-
-        <GridLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:columnCount="3"
-            android:layout_marginTop="10dp"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentStart="true"
-            android:id="@+id/gridlayout2">
-
-            <TextView
-                style="@style/DetailText"
-                android:id="@+id/MileageTextView"
-                android:layout_column="0"
-                android:layout_row="0"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="8dp"
-                android:layout_marginRight="8dp"
-                android:layout_marginTop="10dp"
-                android:text="Mileage" />
-
-            <TextView
-                style="@style/DetailText"
-                android:id="@+id/FuelCosrTextView"
-                android:layout_column="0"
-                android:layout_row="1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="8dp"
-                android:layout_marginRight="8dp"
-                android:layout_marginTop="10dp"
-                android:text="Fuel Cost " />
-
-            <TextView
-                style="@style/DetailText"
-                android:id="@+id/MailTextView"
-                android:layout_column="0"
-                android:layout_row="2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="8dp"
-                android:layout_marginRight="8dp"
-                android:layout_marginTop="10dp"
-                android:text="Email id " />
 
             <EditText
                 android:id="@+id/MileageEditText"
                 android:layout_column="1"
-                android:layout_row="0"
+                android:layout_row="2"
                 android:layout_width="250dp"
                 android:layout_height="wrap_content"
                 android:gravity="left"
@@ -180,18 +129,18 @@
             <Spinner
                 android:id="@+id/FuelCostSpinner"
                 android:layout_column="1"
-                android:layout_row="1"
+                android:layout_row="3"
                 android:layout_width="250dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:gravity="left"
+                android:gravity="center"
                 android:hint="Fuel cost per liter"
                 android:singleLine="true" />
 
             <EditText
                 android:id="@+id/MailEditText"
                 android:layout_column="1"
-                android:layout_row="2"
+                android:layout_row="4"
                 android:layout_width="250dp"
                 android:layout_height="wrap_content"
                 android:gravity="left"
@@ -202,17 +151,16 @@
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/buttonSave"
-            android:text="Proceed"
+            android:id="@+id/buttonText"
             android:layout_marginTop="8dp"
             android:gravity="center"
             android:background="@android:color/transparent"
             android:textColor="#808080"
             android:textSize="20dp"
             android:textStyle="bold|normal"
-            android:layout_below="@+id/gridlayout2"
+            android:layout_below="@+id/gridlayout1"
             android:layout_centerHorizontal="true" />
-    </RelativeLayout>
 
+    </RelativeLayout>
 
 </RelativeLayout>
