--- a/app/src/main/res/layout/simple_list_item.xml
+++ b/app/src/main/res/layout/simple_list_item.xml
@@ -7,15 +7,15 @@
 
     <ImageView
         android:id="@+id/imageView_img"
-        android:layout_width="90dp"
-        android:layout_height="80dp"
+        android:layout_width="75dp"
+        android:layout_height="67dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:scaleType="fitXY" />
+        android:scaleType="centerCrop" />
 
     <TextView
         android:id="@+id/textView_bikeName"
-        style="@style/bikeText"
+        style="@style/bikeName"
         android:layout_alignEnd="@+id/view"
         android:layout_alignParentTop="true"
         android:layout_alignRight="@+id/view"
@@ -24,10 +24,10 @@
         android:text="test" />
 
     <View
+        style="@style/viewlist"
         android:id="@+id/view"
-        style="@style/view"
         android:layout_alignBottom="@+id/imageView_img"
-        android:layout_centerHorizontal="true" />
+        android:layout_toEndOf="@+id/imageView_img" />
 
     <TextView
         android:id="@+id/textView_category"
@@ -38,4 +38,6 @@
         android:layout_toEndOf="@+id/imageView_img"
         android:layout_toRightOf="@+id/imageView_img"
         android:text="test" />
+
+
 </RelativeLayout>
