--- a/app/src/main/res/layout/tab_frag_layout.xml
+++ b/app/src/main/res/layout/tab_frag_layout.xml
@@ -19,18 +19,17 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:fillViewport="true" >
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:textStyle="normal"
-        android:textSize="20dp"
-        android:textColor="#003366"
-        android:layout_marginTop="15dp"
-        android:layout_marginLeft="5dp"
-        android:text="Check"
-        android:id="@+id/textView_tabMsg"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textStyle="normal"
+            android:textSize="18dp"
+            android:textColor="@android:color/background_dark"
+            android:layout_marginTop="15dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:text="Check"
+            android:id="@+id/textView_tabMsg" />
     </ScrollView>
 </RelativeLayout>
