--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -22,10 +22,30 @@
         <item name="android:textStyle">normal|bold</item>
         <item name="android:textColor">#003366</item>
         <item name="android:gravity">left</item>
-        <item name="android:layout_marginTop">6dp</item>
+    </style>
+
+    <style name="bikeName">
+        <item name="android:textAppearance">?android:attr/textAppearanceMedium</item>
+        <item name="android:textSize">18dp</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textStyle">normal|bold</item>
+        <item name="android:textColor">@android:color/background_dark</item>
+        <item name="android:gravity">left</item>
     </style>
 
     <style name="SubText">
+        <item name="android:textAppearance">?android:attr/textAppearanceMedium</item>
+        <item name="android:textSize">15dp</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:textColor">#555555</item>
+        <item name="android:gravity">left</item>
+        <item name="android:layout_marginTop">6dp</item>
+    </style>
+
+    <style name="DetailText">
         <item name="android:textAppearance">?android:attr/textAppearanceMedium</item>
         <item name="android:textSize">18dp</item>
         <item name="android:layout_width">wrap_content</item>
@@ -33,7 +53,7 @@
         <item name="android:textStyle">normal</item>
         <item name="android:textColor">#003366</item>
         <item name="android:gravity">left</item>
-        <item name="android:layout_marginTop">6dp</item>
+        <item name="android:layout_marginTop">14dp</item>
     </style>
 
     <style name="view">
@@ -43,6 +63,14 @@
         <item name="android:layout_marginLeft">10dp</item>
         <item name="android:layout_marginRight">10dp</item>
         <item name="android:layout_marginTop">2dp</item>
+    </style>
+
+    <style name="viewlist">
+        <item name="android:background">#48a3d6</item>
+        <item name="android:layout_width">fill_parent</item>
+        <item name="android:layout_height">0.5dp</item>
+        <item name="android:layout_marginTop">2dp</item>
+        <item name="android:layout_marginRight">10dp</item>
     </style>
 
 </resources>
