--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -30,7 +30,7 @@
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textStyle">normal|bold</item>
-        <item name="android:textColor">@android:color/background_dark</item>
+        <item name="android:textColor">#282828</item>
         <item name="android:gravity">left</item>
     </style>
 
