--- a/app/src/main/res/menu/nav_main.xml
+++ b/app/src/main/res/menu/nav_main.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" tools:context=".NavMainActivity">
     <item android:id="@+id/action_settings" android:title="@string/action_settings"
-        android:orderInCategory="100" android:showAsAction="withText|ifRoom" android:icon="@drawable/settings_icon" />
+         android:showAsAction="never" />
     <item android:id="@+id/action_example" android:title="@string/action_example"
-        android:showAsAction="never"/>
+        android:showAsAction="never" android:orderInCategory="100"/>
 </menu>
