--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,11 +2,12 @@
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="android:Theme.Holo.Light.DarkActionBar">
-       <!-- <item name="android:popupMenuStyle">@style/popupMenu</item> -->
+       <item name="android:popupMenuStyle">@style/popupMenu</item>
     </style>
 
-    <style name="popupMenu">`
+    <style name="popupMenu" parent="android:Theme.Holo.Light">
         <item name="android:popupBackground">#282828</item>
+        <item name="android:itemTextAppearance">@android:color/background_light</item>
     </style>
 
     <style name="splashText">
