--- a/app/src/main/res/layout/fragment_mydetails.xml
+++ b/app/src/main/res/layout/fragment_mydetails.xml
@@ -1,103 +1,104 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <ImageView
+        android:id="@+id/imageView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/imageView"
-        android:src="@drawable/re_bg"
-        android:scaleType="fitXY"
-        android:alpha=".20"
+        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true" />
+        android:alpha=".20"
+        android:scaleType="fitXY"
+        android:src="@drawable/re_bg" />
 
 
     <RelativeLayout
+        android:id="@+id/relativelayout1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/relativelayout1"
-        android:layout_marginTop="30dp"
-        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true">
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="30dp">
 
         <GridLayout
+            android:id="@+id/gridlayout1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:columnCount="5"
             android:layout_alignParentEnd="true"
             android:layout_alignParentStart="true"
-            android:id="@+id/gridlayout1">
+            android:columnCount="5">
 
             <TextView
-                style="@style/DetailText"
                 android:id="@+id/UsernameTextView"
-                android:layout_column="0"
-                android:layout_row="0"
+                style="@style/DetailText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_column="0"
                 android:layout_marginEnd="8dp"
                 android:layout_marginRight="8dp"
                 android:layout_marginTop="10dp"
+                android:layout_row="0"
                 android:text="Username" />
 
 
             <TextView
-                style="@style/DetailText"
                 android:id="@+id/BullTypeTextView"
-                android:layout_column="0"
-                android:layout_row="1"
+                style="@style/DetailText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_column="0"
                 android:layout_marginEnd="8dp"
                 android:layout_marginRight="8dp"
                 android:layout_marginTop="10dp"
+                android:layout_row="1"
                 android:text="Bull Type" />
 
 
             <TextView
-                style="@style/DetailText"
                 android:id="@+id/MileageTextView"
-                android:layout_column="0"
-                android:layout_row="2"
+                style="@style/DetailText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_column="0"
                 android:layout_marginEnd="8dp"
                 android:layout_marginRight="8dp"
                 android:layout_marginTop="10dp"
+                android:layout_row="2"
                 android:text="Mileage" />
 
             <TextView
-                style="@style/DetailText"
                 android:id="@+id/FuelCosrTextView"
-                android:layout_column="0"
-                android:layout_row="3"
+                style="@style/DetailText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_column="0"
                 android:layout_marginEnd="8dp"
                 android:layout_marginRight="8dp"
                 android:layout_marginTop="10dp"
+                android:layout_row="3"
                 android:text="Fuel Cost " />
 
             <TextView
-                style="@style/DetailText"
                 android:id="@+id/MailTextView"
-                android:layout_column="0"
-                android:layout_row="4"
+                style="@style/DetailText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_column="0"
                 android:layout_marginEnd="8dp"
                 android:layout_marginRight="8dp"
                 android:layout_marginTop="10dp"
+                android:layout_row="4"
                 android:text="Email id " />
 
             <EditText
                 android:id="@+id/UserNameEditText"
-                android:layout_column="1"
-                android:layout_row="0"
                 android:layout_width="250dp"
                 android:layout_height="wrap_content"
+                android:layout_column="1"
+                android:layout_row="0"
                 android:gravity="left"
                 android:hint="Username"
                 android:inputType="textNoSuggestions|textVisiblePassword"
@@ -105,11 +106,11 @@
 
             <Spinner
                 android:id="@+id/BullTypeSpinner"
-                android:layout_column="1"
-                android:layout_row="1"
                 android:layout_width="250dp"
                 android:layout_height="wrap_content"
+                android:layout_column="1"
                 android:layout_marginTop="10dp"
+                android:layout_row="1"
                 android:gravity="center"
                 android:hint="Password"
                 android:inputType="textPassword"
@@ -117,10 +118,10 @@
 
             <EditText
                 android:id="@+id/MileageEditText"
-                android:layout_column="1"
-                android:layout_row="2"
                 android:layout_width="250dp"
                 android:layout_height="wrap_content"
+                android:layout_column="1"
+                android:layout_row="2"
                 android:gravity="left"
                 android:hint="Mileage (approx)"
                 android:inputType="number"
@@ -128,38 +129,38 @@
 
             <Spinner
                 android:id="@+id/FuelCostSpinner"
-                android:layout_column="1"
-                android:layout_row="3"
                 android:layout_width="250dp"
                 android:layout_height="wrap_content"
+                android:layout_column="1"
                 android:layout_marginTop="10dp"
+                android:layout_row="3"
                 android:gravity="center"
                 android:hint="Fuel cost per liter"
                 android:singleLine="true" />
 
             <EditText
                 android:id="@+id/MailEditText"
-                android:layout_column="1"
-                android:layout_row="4"
                 android:layout_width="250dp"
                 android:layout_height="wrap_content"
+                android:layout_column="1"
+                android:layout_row="4"
                 android:gravity="left"
                 android:hint="Mail id"
                 android:singleLine="true" />
         </GridLayout>
 
         <Button
+            android:id="@+id/buttonText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/buttonText"
+            android:layout_below="@+id/gridlayout1"
+            android:layout_centerHorizontal="true"
             android:layout_marginTop="8dp"
-            android:gravity="center"
             android:background="@android:color/transparent"
+            android:gravity="center"
             android:textColor="#808080"
             android:textSize="20dp"
-            android:textStyle="bold|normal"
-            android:layout_below="@+id/gridlayout1"
-            android:layout_centerHorizontal="true" />
+            android:textStyle="bold|normal" />
 
     </RelativeLayout>
 
