--- a/app/src/main/res/layout/fragment_mydetails.xml
+++ b/app/src/main/res/layout/fragment_mydetails.xml
@@ -41,7 +41,7 @@
                 android:layout_marginRight="8dp"
                 android:layout_marginTop="10dp"
                 android:layout_row="0"
-                android:text="Username" />
+                android:text="@string/Username" />
 
 
             <TextView
@@ -54,7 +54,7 @@
                 android:layout_marginRight="8dp"
                 android:layout_marginTop="10dp"
                 android:layout_row="1"
-                android:text="Bull Type" />
+                android:text="@string/Bull_Type" />
 
 
             <TextView
@@ -67,7 +67,7 @@
                 android:layout_marginRight="8dp"
                 android:layout_marginTop="10dp"
                 android:layout_row="2"
-                android:text="Mileage" />
+                android:text="@string/Mileage" />
 
             <TextView
                 android:id="@+id/FuelCosrTextView"
@@ -79,7 +79,7 @@
                 android:layout_marginRight="8dp"
                 android:layout_marginTop="10dp"
                 android:layout_row="3"
-                android:text="Fuel Cost " />
+                android:text="@string/fuelCost" />
 
             <TextView
                 android:id="@+id/MailTextView"
@@ -91,7 +91,7 @@
                 android:layout_marginRight="8dp"
                 android:layout_marginTop="10dp"
                 android:layout_row="4"
-                android:text="Email id " />
+                android:text="@string/emailId" />
 
             <EditText
                 android:id="@+id/UserNameEditText"
@@ -100,7 +100,7 @@
                 android:layout_column="1"
                 android:layout_row="0"
                 android:gravity="left"
-                android:hint="Username"
+                android:hint="@string/Username_hint"
                 android:inputType="textNoSuggestions|textVisiblePassword"
                 android:singleLine="true" />
 
@@ -112,8 +112,6 @@
                 android:layout_marginTop="10dp"
                 android:layout_row="1"
                 android:gravity="center"
-                android:hint="Password"
-                android:inputType="textPassword"
                 android:singleLine="true" />
 
             <EditText
@@ -123,7 +121,7 @@
                 android:layout_column="1"
                 android:layout_row="2"
                 android:gravity="left"
-                android:hint="Mileage (approx)"
+                android:hint="@string/MileageHint"
                 android:inputType="number"
                 android:singleLine="true" />
 
@@ -135,7 +133,7 @@
                 android:layout_marginTop="10dp"
                 android:layout_row="3"
                 android:gravity="center"
-                android:hint="Fuel cost per liter"
+                android:hint="@string/fuelcostHint"
                 android:singleLine="true" />
 
             <EditText
@@ -145,7 +143,7 @@
                 android:layout_column="1"
                 android:layout_row="4"
                 android:gravity="left"
-                android:hint="Mail id"
+                android:hint="@string/emailidHint"
                 android:singleLine="true" />
         </GridLayout>
 
@@ -159,7 +157,7 @@
             android:background="@android:color/transparent"
             android:gravity="center"
             android:textColor="#808080"
-            android:textSize="20dp"
+            android:textSize="20sp"
             android:textStyle="bold|normal" />
 
     </RelativeLayout>
