Json -Asynctask - get current location
Many changes made:
fetching json for distance as well as nearby gas station.
Adding images for history tabs
Adding class to perform asynctask
New class GPSTracker to get current location

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,12 +2,15 @@
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="android:Theme.Holo.Light.DarkActionBar">
-       <item name="android:popupMenuStyle">@style/popupMenu</item>
+        <item name="android:popupMenuStyle">@style/popupMenu</item>
     </style>
 
-    <style name="popupMenu" parent="android:Theme.Holo.Light">
+    <style name="popupMenu">
         <item name="android:popupBackground">#282828</item>
         <item name="android:itemTextAppearance">@android:color/background_light</item>
+        <item name="android:actionMenuTextColor">@android:color/background_light</item>
+        <item name="android:textColor">@android:color/background_light</item>
+
     </style>
 
     <style name="splashText">
