--- a/app/src/main/res/layout/activity_tofrom.xml
+++ b/app/src/main/res/layout/activity_tofrom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:fillViewport="true"
     android:orientation="vertical"
     android:padding="5dp">
@@ -15,7 +15,6 @@
             android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:alpha=".15"
             android:scaleType="fitXY"
@@ -24,10 +23,8 @@
 
         <GridLayout
             android:id="@+id/gridlayout1"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentStart="true"
             android:layout_marginTop="5dp"
             android:columnCount="2">
 
@@ -121,7 +118,7 @@
             <View
                 android:id="@+id/view"
                 style="@style/view"
-                android:layout_alignParentStart="true"
+
                 android:layout_centerHorizontal="true" />
 
             <ListView
