Back Navigation handling done
No proper back navigation was maintained initially, the same has been
addressed properly. Also for my details page, back button is removed and
only Update is provided for disabling unnecessary back navigation from
myDetails fragment.

--- a/app/src/main/res/layout/fragment_mydetails.xml
+++ b/app/src/main/res/layout/fragment_mydetails.xml
@@ -159,6 +159,7 @@
             android:gravity="center"
             android:textColor="#808080"
             android:textSize="20sp"
+            android:text="Update"
             android:textStyle="bold|normal" />
 
     </RelativeLayout>
