--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -7,15 +7,20 @@
     <TextView
         style="@style/splashText"
         android:id="@+id/textView_1"
-        android:layout_marginTop="53dp"
+        android:text="t1"
+        android:layout_marginTop="60dp"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginLeft="71dp"
+        android:layout_marginStart="71dp" />
 
     <TextView
         style="@style/splashText"
         android:id="@+id/textView_2"
-        android:layout_below="@+id/textView_1"
-        android:layout_alignParentEnd="true"
-        android:layout_marginEnd="55dp" />
+        android:text="t2"
+        android:layout_alignTop="@+id/textView_1"
+        android:layout_toRightOf="@+id/textView_1"
+        android:layout_toEndOf="@+id/textView_1" />
 
 </RelativeLayout>
